auth + большие доработки